--- a/OzricEngine/OzricEngine.csproj
+++ b/OzricEngine/OzricEngine.csproj
@@ -80,12 +80,16 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="ClientAuth.cs" />
+        <Compile Include="ClientEvents.cs" />
         <Compile Include="Engine.cs" />
         <Compile Include="JsonConverters.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="ServerAuthOK.cs" />
         <Compile Include="ServerAuthRequired.cs" />
-        <Compile Include="ServerAuthResult.cs" />
+        <Compile Include="ServerAuthResults.cs" />
+        <Compile Include="ServerEvent.cs" />
+        <Compile Include="ServerEventSubscribeResult.cs" />
         <Compile Include="ServerResult.cs" />
         <Compile Include="ServerResultTypeAttribute.cs" />
     </ItemGroup>
