Light color assignment working

--- a/OzricEngine/OzricEngine.csproj
+++ b/OzricEngine/OzricEngine.csproj
@@ -100,27 +100,19 @@
         <Compile Include="json\JsonConverterEvent.cs" />
         <Compile Include="json\JsonConverterServerMessage.cs" />
         <Compile Include="json\TypeKeyAttribute.cs" />
-        <Compile Include="logic\ColorHS.cs" />
-        <Compile Include="logic\ColorTemp.cs" />
-        <Compile Include="logic\ColorValue.cs" />
-        <Compile Include="logic\IfAll.cs" />
-        <Compile Include="logic\Constant.cs" />
-        <Compile Include="logic\DayPhases.cs" />
-        <Compile Include="logic\Pin.cs" />
-        <Compile Include="logic\InputSelector.cs" />
-        <Compile Include="logic\Light.cs" />
-        <Compile Include="logic\OnOff.cs" />
-        <Compile Include="logic\IfAny.cs" />
-        <Compile Include="logic\ColorRGB.cs" />
-        <Compile Include="logic\OutputSelector.cs" />
-        <Compile Include="logic\Sensor.cs" />
-        <Compile Include="logic\SkyBrightness.cs" />
-        <Compile Include="logic\Node.cs" />
-        <Compile Include="logic\Scalar.cs" />
-        <Compile Include="logic\Switch.cs" />
-        <Compile Include="logic\Value.cs" />
-        <Compile Include="logic\ValueType.cs" />
-        <Compile Include="logic\VariableInputs.cs" />
+        <Compile Include="nodes\IfAll.cs" />
+        <Compile Include="nodes\Constant.cs" />
+        <Compile Include="nodes\DayPhases.cs" />
+        <Compile Include="nodes\Pin.cs" />
+        <Compile Include="nodes\InputSelector.cs" />
+        <Compile Include="nodes\Light.cs" />
+        <Compile Include="nodes\IfAny.cs" />
+        <Compile Include="nodes\OutputSelector.cs" />
+        <Compile Include="nodes\Sensor.cs" />
+        <Compile Include="nodes\SkyBrightness.cs" />
+        <Compile Include="nodes\Node.cs" />
+        <Compile Include="nodes\Switch.cs" />
+        <Compile Include="nodes\VariableInputs.cs" />
         <Compile Include="messages\ClientCallService.cs" />
         <Compile Include="messages\ClientCommand.cs" />
         <Compile Include="messages\ClientGetConfig.cs" />
@@ -149,6 +141,14 @@
         <Compile Include="messages\EventDataServiceData.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="values\ColorHS.cs" />
+        <Compile Include="values\ColorRGB.cs" />
+        <Compile Include="values\ColorTemp.cs" />
+        <Compile Include="values\ColorValue.cs" />
+        <Compile Include="values\OnOff.cs" />
+        <Compile Include="values\Scalar.cs" />
+        <Compile Include="values\Value.cs" />
+        <Compile Include="values\ValueType.cs" />
     </ItemGroup>
     <ItemGroup>
       <None Include="packages.config" />
