--- a/OzricEngine/OzricEngine.csproj
+++ b/OzricEngine/OzricEngine.csproj
@@ -1,172 +1,173 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-    <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+  <PropertyGroup>
+    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <ProjectGuid>{9041AD3D-E7B9-49D3-B7DC-03BBE515A2C0}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>OzricEngine</RootNamespace>
+    <AssemblyName>OzricEngine</AssemblyName>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <FileAlignment>512</FileAlignment>
+    <LangVersion>8</LangVersion>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>full</DebugType>
+    <Optimize>false</Optimize>
+    <OutputPath>bin\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <DebugType>pdbonly</DebugType>
+    <Optimize>true</Optimize>
+    <OutputPath>bin\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <ItemGroup>
+    <Reference Include="Humanizer, Version=2.13.0.0, Culture=neutral, PublicKeyToken=979442b78dfc278e">
+      <HintPath>..\packages\Humanizer.Core.2.13.14\lib\netstandard2.0\Humanizer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="JetBrains.Annotations, Version=2021.3.0.0, Culture=neutral, PublicKeyToken=1010a0d8d6380325">
+      <HintPath>..\packages\JetBrains.Annotations.2021.3.0\lib\net20\JetBrains.Annotations.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=6.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51">
+      <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.6.0.0\lib\net461\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="mscorlib" />
+    <Reference Include="System" />
+    <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51">
+      <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Core" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Memory, Version=4.0.1.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51">
+      <HintPath>..\packages\System.Memory.4.5.4\lib\net461\System.Memory.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.Numerics.Vectors, Version=4.1.4.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <HintPath>..\packages\System.Numerics.Vectors.4.5.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.6.0.0\lib\net461\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Runtime.Serialization.Json, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <HintPath>C:\Windows\Microsoft.NET\Framework64\v4.0.30319\System.Runtime.Serialization.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Text.Encodings.Web, Version=6.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51">
+      <HintPath>..\packages\System.Text.Encodings.Web.6.0.0\lib\net461\System.Text.Encodings.Web.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Text.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51">
+      <HintPath>..\packages\System.Text.Json.6.0.0\lib\net461\System.Text.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51">
+      <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51">
+      <HintPath>..\packages\System.ValueTuple.4.5.0\lib\net47\System.ValueTuple.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Comms.cs" />
+    <Compile Include="Engine.cs" />
+    <Compile Include="ext\DateTimeExt.cs" />
+    <Compile Include="ext\DictionaryExt.cs" />
+    <Compile Include="ext\EnumerableExt.cs" />
+    <Compile Include="ext\ExceptionExt.cs" />
+    <Compile Include="Home.cs" />
+    <Compile Include="json\JsonConverterDictionaryObjectValues.cs" />
+    <Compile Include="json\JsonConverterBase.cs" />
+    <Compile Include="json\JsonConverterEvent.cs" />
+    <Compile Include="json\JsonConverterServerMessage.cs" />
+    <Compile Include="json\TypeKeyAttribute.cs" />
+    <Compile Include="messages\EventCallServiceServiceData.cs" />
+    <Compile Include="nodes\IfAll.cs" />
+    <Compile Include="nodes\Constant.cs" />
+    <Compile Include="nodes\DayPhases.cs" />
+    <Compile Include="nodes\Pin.cs" />
+    <Compile Include="nodes\InputSelector.cs" />
+    <Compile Include="nodes\Light.cs" />
+    <Compile Include="nodes\IfAny.cs" />
+    <Compile Include="nodes\OutputSelector.cs" />
+    <Compile Include="nodes\Sensor.cs" />
+    <Compile Include="nodes\SkyBrightness.cs" />
+    <Compile Include="nodes\Node.cs" />
+    <Compile Include="nodes\Switch.cs" />
+    <Compile Include="nodes\VariableInputs.cs" />
+    <Compile Include="messages\ClientCallService.cs" />
+    <Compile Include="messages\ClientCommand.cs" />
+    <Compile Include="messages\ClientGetConfig.cs" />
+    <Compile Include="messages\ClientGetServices.cs" />
+    <Compile Include="messages\ClientGetStates.cs" />
+    <Compile Include="messages\ClientPing.cs" />
+    <Compile Include="messages\EventCallServiceData.cs" />
+    <Compile Include="messages\ClientAuth.cs" />
+    <Compile Include="messages\ClientEventSubscribe.cs" />
+    <Compile Include="messages\Event.cs" />
+    <Compile Include="messages\EventCallService.cs" />
+    <Compile Include="messages\Result.cs" />
+    <Compile Include="messages\ServerResult.cs" />
+    <Compile Include="messages\State.cs" />
+    <Compile Include="messages\StateContext.cs" />
+    <Compile Include="messages\EventData.cs" />
+    <Compile Include="messages\EventState.cs" />
+    <Compile Include="messages\EventStateChanged.cs" />
+    <Compile Include="messages\ServerGetStates.cs" />
+    <Compile Include="messages\ServerAuthOK.cs" />
+    <Compile Include="messages\ServerAuthRequired.cs" />
+    <Compile Include="messages\ServerAuthResults.cs" />
+    <Compile Include="messages\ServerEvent.cs" />
+    <Compile Include="messages\ServerEventSubscribed.cs" />
+    <Compile Include="messages\ServerMessage.cs" />
+    <Compile Include="messages\EventDataServiceData.cs" />
+    <Compile Include="Program.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="utils\AsyncObject.cs" />
+    <Compile Include="values\ColorHS.cs" />
+    <Compile Include="values\ColorRGB.cs" />
+    <Compile Include="values\ColorTemp.cs" />
+    <Compile Include="values\ColorValue.cs" />
+    <Compile Include="values\OnOff.cs" />
+    <Compile Include="values\Scalar.cs" />
+    <Compile Include="values\Value.cs" />
+    <Compile Include="values\ValueType.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\packages\System.Text.Json.6.0.0\build\System.Text.Json.targets" Condition="Exists('..\packages\System.Text.Json.6.0.0\build\System.Text.Json.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
-        <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-        <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-        <ProjectGuid>{9041AD3D-E7B9-49D3-B7DC-03BBE515A2C0}</ProjectGuid>
-        <OutputType>Exe</OutputType>
-        <AppDesignerFolder>Properties</AppDesignerFolder>
-        <RootNamespace>OzricEngine</RootNamespace>
-        <AssemblyName>OzricEngine</AssemblyName>
-        <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-        <FileAlignment>512</FileAlignment>
-        <LangVersion>8</LangVersion>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105.The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-        <PlatformTarget>AnyCPU</PlatformTarget>
-        <DebugSymbols>true</DebugSymbols>
-        <DebugType>full</DebugType>
-        <Optimize>false</Optimize>
-        <OutputPath>bin\Debug\</OutputPath>
-        <DefineConstants>DEBUG;TRACE</DefineConstants>
-        <ErrorReport>prompt</ErrorReport>
-        <WarningLevel>4</WarningLevel>
-    </PropertyGroup>
-    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-        <PlatformTarget>AnyCPU</PlatformTarget>
-        <DebugType>pdbonly</DebugType>
-        <Optimize>true</Optimize>
-        <OutputPath>bin\Release\</OutputPath>
-        <DefineConstants>TRACE</DefineConstants>
-        <ErrorReport>prompt</ErrorReport>
-        <WarningLevel>4</WarningLevel>
-    </PropertyGroup>
-    <ItemGroup>
-        <Reference Include="Humanizer, Version=2.13.0.0, Culture=neutral, PublicKeyToken=979442b78dfc278e">
-          <HintPath>..\packages\Humanizer.Core.2.13.14\lib\netstandard2.0\Humanizer.dll</HintPath>
-          <Private>True</Private>
-        </Reference>
-        <Reference Include="JetBrains.Annotations, Version=2021.3.0.0, Culture=neutral, PublicKeyToken=1010a0d8d6380325">
-          <HintPath>..\packages\JetBrains.Annotations.2021.3.0\lib\net20\JetBrains.Annotations.dll</HintPath>
-          <Private>True</Private>
-        </Reference>
-        <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=6.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51">
-          <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.6.0.0\lib\net461\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
-          <Private>True</Private>
-        </Reference>
-        <Reference Include="mscorlib" />
-        <Reference Include="System" />
-        <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51">
-          <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
-          <Private>True</Private>
-        </Reference>
-        <Reference Include="System.Core" />
-        <Reference Include="System.Data" />
-        <Reference Include="System.Memory, Version=4.0.1.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51">
-          <HintPath>..\packages\System.Memory.4.5.4\lib\net461\System.Memory.dll</HintPath>
-          <Private>True</Private>
-        </Reference>
-        <Reference Include="System.Numerics" />
-        <Reference Include="System.Numerics.Vectors, Version=4.1.4.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-          <HintPath>..\packages\System.Numerics.Vectors.4.5.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
-          <Private>True</Private>
-        </Reference>
-        <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-          <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.6.0.0\lib\net461\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
-          <Private>True</Private>
-        </Reference>
-        <Reference Include="System.Runtime.Serialization.Json, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-          <HintPath>C:\Windows\Microsoft.NET\Framework64\v4.0.30319\System.Runtime.Serialization.Json.dll</HintPath>
-        </Reference>
-        <Reference Include="System.Text.Encodings.Web, Version=6.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51">
-          <HintPath>..\packages\System.Text.Encodings.Web.6.0.0\lib\net461\System.Text.Encodings.Web.dll</HintPath>
-          <Private>True</Private>
-        </Reference>
-        <Reference Include="System.Text.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51">
-          <HintPath>..\packages\System.Text.Json.6.0.0\lib\net461\System.Text.Json.dll</HintPath>
-          <Private>True</Private>
-        </Reference>
-        <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51">
-          <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
-          <Private>True</Private>
-        </Reference>
-        <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51">
-          <HintPath>..\packages\System.ValueTuple.4.5.0\lib\net47\System.ValueTuple.dll</HintPath>
-          <Private>True</Private>
-        </Reference>
-        <Reference Include="System.Xml" />
-    </ItemGroup>
-    <ItemGroup>
-        <Compile Include="Comms.cs" />
-        <Compile Include="Engine.cs" />
-        <Compile Include="ext\DateTimeExt.cs" />
-        <Compile Include="ext\DictionaryExt.cs" />
-        <Compile Include="ext\EnumerableExt.cs" />
-        <Compile Include="ext\ExceptionExt.cs" />
-        <Compile Include="Home.cs" />
-        <Compile Include="json\JsonConverterDictionaryObjectValues.cs" />
-        <Compile Include="json\JsonConverterBase.cs" />
-        <Compile Include="json\JsonConverterEvent.cs" />
-        <Compile Include="json\JsonConverterServerMessage.cs" />
-        <Compile Include="json\TypeKeyAttribute.cs" />
-        <Compile Include="nodes\IfAll.cs" />
-        <Compile Include="nodes\Constant.cs" />
-        <Compile Include="nodes\DayPhases.cs" />
-        <Compile Include="nodes\Pin.cs" />
-        <Compile Include="nodes\InputSelector.cs" />
-        <Compile Include="nodes\Light.cs" />
-        <Compile Include="nodes\IfAny.cs" />
-        <Compile Include="nodes\OutputSelector.cs" />
-        <Compile Include="nodes\Sensor.cs" />
-        <Compile Include="nodes\SkyBrightness.cs" />
-        <Compile Include="nodes\Node.cs" />
-        <Compile Include="nodes\Switch.cs" />
-        <Compile Include="nodes\VariableInputs.cs" />
-        <Compile Include="messages\ClientCallService.cs" />
-        <Compile Include="messages\ClientCommand.cs" />
-        <Compile Include="messages\ClientGetConfig.cs" />
-        <Compile Include="messages\ClientGetServices.cs" />
-        <Compile Include="messages\ClientGetStates.cs" />
-        <Compile Include="messages\ClientPing.cs" />
-        <Compile Include="messages\EventCallServiceData.cs" />
-        <Compile Include="messages\ClientAuth.cs" />
-        <Compile Include="messages\ClientEventSubscribe.cs" />
-        <Compile Include="messages\Event.cs" />
-        <Compile Include="messages\EventCallService.cs" />
-        <Compile Include="messages\Result.cs" />
-        <Compile Include="messages\ServerResult.cs" />
-        <Compile Include="messages\State.cs" />
-        <Compile Include="messages\StateContext.cs" />
-        <Compile Include="messages\EventData.cs" />
-        <Compile Include="messages\EventState.cs" />
-        <Compile Include="messages\EventStateChanged.cs" />
-        <Compile Include="messages\ServerGetStates.cs" />
-        <Compile Include="messages\ServerAuthOK.cs" />
-        <Compile Include="messages\ServerAuthRequired.cs" />
-        <Compile Include="messages\ServerAuthResults.cs" />
-        <Compile Include="messages\ServerEvent.cs" />
-        <Compile Include="messages\ServerEventSubscribed.cs" />
-        <Compile Include="messages\ServerMessage.cs" />
-        <Compile Include="messages\EventDataServiceData.cs" />
-        <Compile Include="Program.cs" />
-        <Compile Include="Properties\AssemblyInfo.cs" />
-        <Compile Include="values\ColorHS.cs" />
-        <Compile Include="values\ColorRGB.cs" />
-        <Compile Include="values\ColorTemp.cs" />
-        <Compile Include="values\ColorValue.cs" />
-        <Compile Include="values\OnOff.cs" />
-        <Compile Include="values\Scalar.cs" />
-        <Compile Include="values\Value.cs" />
-        <Compile Include="values\ValueType.cs" />
-    </ItemGroup>
-    <ItemGroup>
-      <None Include="packages.config" />
-    </ItemGroup>
-    <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-    <Import Project="..\packages\System.Text.Json.6.0.0\build\System.Text.Json.targets" Condition="Exists('..\packages\System.Text.Json.6.0.0\build\System.Text.Json.targets')" />
-    <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-      <PropertyGroup>
-        <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105.The missing file is {0}.</ErrorText>
-      </PropertyGroup>
-      <Error Condition="!Exists('..\packages\System.Text.Json.6.0.0\build\System.Text.Json.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\System.Text.Json.6.0.0\build\System.Text.Json.targets'))" />
-    </Target>
-    <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+    <Error Condition="!Exists('..\packages\System.Text.Json.6.0.0\build\System.Text.Json.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\System.Text.Json.6.0.0\build\System.Text.Json.targets'))" />
+  </Target>
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
          Other similar extension points exist, see Microsoft.Common.targets.
     <Target Name="BeforeBuild">
     </Target>
     <Target Name="AfterBuild">
     </Target>
     -->
-
 </Project>
