Make OzricEngine NETCore5

--- a/OzricEngine/OzricEngine.csproj
+++ b/OzricEngine/OzricEngine.csproj
@@ -1,181 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
-  <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9041AD3D-E7B9-49D3-B7DC-03BBE515A2C0}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>OzricEngine</RootNamespace>
-    <AssemblyName>OzricEngine</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <LangVersion>8</LangVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="mscorlib" />
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Numerics" />
-    <Reference Include="System.Runtime.Serialization.Json, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-      <HintPath>C:\Windows\Microsoft.NET\Framework64\v4.0.30319\System.Runtime.Serialization.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Comms.cs" />
-    <Compile Include="Engine.cs" />
-    <Compile Include="ext\DateTimeExt.cs" />
-    <Compile Include="ext\DictionaryExt.cs" />
-    <Compile Include="ext\EnumerableExt.cs" />
-    <Compile Include="ext\ExceptionExt.cs" />
-    <Compile Include="Home.cs" />
-    <Compile Include="json\JsonConverterDictionaryObjectValues.cs" />
-    <Compile Include="json\JsonConverterBase.cs" />
-    <Compile Include="json\JsonConverterEvent.cs" />
-    <Compile Include="json\JsonConverterServerMessage.cs" />
-    <Compile Include="json\TypeKeyAttribute.cs" />
-    <Compile Include="messages\EventCallServiceServiceData.cs" />
-    <Compile Include="nodes\IfAll.cs" />
-    <Compile Include="nodes\Constant.cs" />
-    <Compile Include="nodes\DayPhases.cs" />
-    <Compile Include="nodes\Pin.cs" />
-    <Compile Include="nodes\InputSelector.cs" />
-    <Compile Include="nodes\Light.cs" />
-    <Compile Include="nodes\IfAny.cs" />
-    <Compile Include="nodes\OutputSelector.cs" />
-    <Compile Include="nodes\Sensor.cs" />
-    <Compile Include="nodes\SkyBrightness.cs" />
-    <Compile Include="nodes\Node.cs" />
-    <Compile Include="nodes\Switch.cs" />
-    <Compile Include="nodes\VariableInputs.cs" />
-    <Compile Include="messages\ClientCallService.cs" />
-    <Compile Include="messages\ClientCommand.cs" />
-    <Compile Include="messages\ClientGetConfig.cs" />
-    <Compile Include="messages\ClientGetServices.cs" />
-    <Compile Include="messages\ClientGetStates.cs" />
-    <Compile Include="messages\ClientPing.cs" />
-    <Compile Include="messages\EventCallServiceData.cs" />
-    <Compile Include="messages\ClientAuth.cs" />
-    <Compile Include="messages\ClientEventSubscribe.cs" />
-    <Compile Include="messages\Event.cs" />
-    <Compile Include="messages\EventCallService.cs" />
-    <Compile Include="messages\Result.cs" />
-    <Compile Include="messages\ServerResult.cs" />
-    <Compile Include="messages\State.cs" />
-    <Compile Include="messages\StateContext.cs" />
-    <Compile Include="messages\EventData.cs" />
-    <Compile Include="messages\EventState.cs" />
-    <Compile Include="messages\EventStateChanged.cs" />
-    <Compile Include="messages\ServerGetStates.cs" />
-    <Compile Include="messages\ServerAuthOK.cs" />
-    <Compile Include="messages\ServerAuthRequired.cs" />
-    <Compile Include="messages\ServerAuthResults.cs" />
-    <Compile Include="messages\ServerEvent.cs" />
-    <Compile Include="messages\ServerEventSubscribed.cs" />
-    <Compile Include="messages\ServerMessage.cs" />
-    <Compile Include="messages\EventDataServiceData.cs" />
-    <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="utils\AsyncObject.cs" />
-    <Compile Include="values\ColorHS.cs" />
-    <Compile Include="values\ColorRGB.cs" />
-    <Compile Include="values\ColorTemp.cs" />
-    <Compile Include="values\ColorValue.cs" />
-    <Compile Include="values\OnOff.cs" />
-    <Compile Include="values\Scalar.cs" />
-    <Compile Include="values\Value.cs" />
-    <Compile Include="values\ValueType.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Humanizer" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.af" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.ar" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.az" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.bg" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.bn-BD" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.cs" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.da" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.de" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.el" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.es" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.fa" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.fi-FI" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.fr" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.fr-BE" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.he" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.hr" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.hu" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.hy" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.id" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.is" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.it" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.ja" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.ko-KR" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.ku" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.lv" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.ms-MY" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.mt" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.nb" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.nb-NO" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.nl" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.pl" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.pt" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.ro" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.ru" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.sk" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.sl" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.sr" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.sr-Latn" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.sv" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.th-TH" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.tr" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.uk" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.uz-Cyrl-UZ" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.uz-Latn-UZ" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.vi" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.zh-CN" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.zh-Hans" Version="2.13.14" />
-    <PackageReference Include="Humanizer.Core.zh-Hant" Version="2.13.14" />
-    <PackageReference Include="JetBrains.Annotations" Version="2021.3.0" />
-    <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="6.0.0" />
-    <PackageReference Include="System.Buffers" Version="4.5.1" />
-    <PackageReference Include="System.Memory" Version="4.5.4" />
-    <PackageReference Include="System.Numerics.Vectors" Version="4.5.0" />
-    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="6.0.0" />
-    <PackageReference Include="System.Text.Encodings.Web" Version="6.0.0" />
-    <PackageReference Include="System.Text.Json" Version="6.0.0" />
-    <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.4" />
-    <PackageReference Include="System.ValueTuple" Version="4.5.0" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-         Other similar extension points exist, see Microsoft.Common.targets.
-    <Target Name="BeforeBuild">
-    </Target>
-    <Target Name="AfterBuild">
-    </Target>
-    -->
+<Project Sdk="Microsoft.NET.Sdk">
+
+    <PropertyGroup>
+        <TargetFramework>net5.0</TargetFramework>
+    </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Humanizer.Core" Version="2.13.14" />
+      <PackageReference Include="JetBrains.Annotations" Version="2021.3.0" />
+    </ItemGroup>
+
 </Project>
