--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,9 +24,9 @@ jobs:
     - name: Test
       run: dotnet test --no-build --verbosity normal
     - name: Publish
-      run: dotnet publish
+      run: dotnet publish --configuration Release
     - name: Upload
       uses: actions/upload-artifact@v2
       with:
         name: OrsonRelease
-        path: /home/runner/work/Playground/Playground/src/WebApp1/bin/Debug/netcoreapp3.1/publish/
+        path: /home/runner/work/ozric/ozric/OzricEngine/bin/Release/netcoreapp3.1/publish/
