--- a/OzricService/Properties/launchSettings.json
+++ b/OzricService/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:56674"
+      "applicationUrl": "http://localhost:8100"
     }
   },
   "profiles": {
@@ -13,7 +13,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:7258;http://localhost:5258",
+      "applicationUrl": "http://localhost:8099",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
