--- a/OzricService/appsettings.json
+++ b/OzricService/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:8099"
+      }
+    }
+  },
   "AllowedHosts": "172.30.32.2"
 }
